# haskell-custom-language

./: README.md  feedback.md  language.cabal  verslag.txt
lib/: Engine.hs  Interpreter.hs  Parser.hs  tempMain.hs
src/: Main.hs  factorial.js  shooter.js  snake.js  test.gs  test.js  test2  test2.js  test3.js  test4.js
